fix the footer to the bottom of the page on small screens when a category page only has a few items

--- a/table-of-contents-style-homepage/category.css
+++ b/table-of-contents-style-homepage/category.css
@@ -28,6 +28,12 @@ header {
   margin-bottom: 0;
 }
 
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .breadcrumb {
   width: 16.8rem;
 }
@@ -305,7 +311,7 @@ input:checked + .slider:before {
   html {
     height: inherit;
   }
-  
+
   .little-help-book {
     display: inline;
   }
@@ -339,6 +345,7 @@ input:checked + .slider:before {
 
   .inner-container {
     flex-direction: column;
+    flex-grow: 1;
   }
 
   .dropdown, .print {
